oftexmathParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .oftexmathListener import oftexmathListener
else:
    from oftexmathListener import oftexmathListener

class oftexmathParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'\\'", 
                     u"'_'", u"'^'", u"'{'", u"'}'", u"'&'", u"'('", u"')'", 
                     u"'='", u"'+'", u"'-'", u"'*'", u"'/'", u"'\\\\'" ]

    symbolicNames = [ u"<INVALID>", u"VARIABLE", u"NUMBER", u"BACKSLASH", 
                      u"SUBSET", u"SUPERSET", u"LEFTBRACE", u"RIGHTBRACE", 
                      u"COLFORMAT", u"BRACEOPEN", u"BRACECLOSE", u"EQ", 
                      u"PLUS", u"MINUS", u"MUL", u"DIV", u"ROWDELIMIT", 
                      u"MAINWORDS", u"SUBWORDS", u"KEYWORDS", u"WS" ]

    RULE_init = 0
    RULE_main = 1
    RULE_allinone = 2
    RULE_braceoc = 3
    RULE_signs = 4
    RULE_muldiv = 5
    RULE_mul = 6
    RULE_div = 7
    RULE_colformat = 8
    RULE_rowdelimit = 9
    RULE_variable = 10
    RULE_number = 11
    RULE_subset = 12
    RULE_superset = 13
    RULE_mainexpr = 14
    RULE_expr = 15
    RULE_mainwords = 16
    RULE_subwords = 17
    RULE_keywords = 18

    ruleNames =  [ u"init", u"main", u"allinone", u"braceoc", u"signs", 
                   u"muldiv", u"mul", u"div", u"colformat", u"rowdelimit", 
                   u"variable", u"number", u"subset", u"superset", u"mainexpr", 
                   u"expr", u"mainwords", u"subwords", u"keywords" ]

    EOF = Token.EOF
    VARIABLE=1
    NUMBER=2
    BACKSLASH=3
    SUBSET=4
    SUPERSET=5
    LEFTBRACE=6
    RIGHTBRACE=7
    COLFORMAT=8
    BRACEOPEN=9
    BRACECLOSE=10
    EQ=11
    PLUS=12
    MINUS=13
    MUL=14
    DIV=15
    ROWDELIMIT=16
    MAINWORDS=17
    SUBWORDS=18
    KEYWORDS=19
    WS=20

    def __init__(self, input):
        super(oftexmathParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.InitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def main(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.MainContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.MainContext,i)


        def getRuleIndex(self):
            return oftexmathParser.RULE_init

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterInit(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitInit(self)




    def init(self):

        localctx = oftexmathParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38 
                self.main()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << oftexmathParser.VARIABLE) | (1 << oftexmathParser.NUMBER) | (1 << oftexmathParser.BACKSLASH) | (1 << oftexmathParser.COLFORMAT) | (1 << oftexmathParser.BRACEOPEN) | (1 << oftexmathParser.EQ) | (1 << oftexmathParser.PLUS) | (1 << oftexmathParser.MINUS) | (1 << oftexmathParser.ROWDELIMIT))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.MainContext, self).__init__(parent, invokingState)
            self.parser = parser

        def mainexpr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.MainexprContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.MainexprContext,i)


        def allinone(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.AllinoneContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.AllinoneContext,i)


        def getRuleIndex(self):
            return oftexmathParser.RULE_main

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterMain(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitMain(self)




    def main(self):

        localctx = oftexmathParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        try:
            self.state = 62
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 43 
                self.mainexpr()
                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 46
                        la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                        if la_ == 1:
                            self.state = 44 
                            self.allinone()
                            pass

                        elif la_ == 2:
                            self.state = 45 
                            self.mainexpr()
                            pass

                 
                    self.state = 50
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51 
                self.mainexpr()
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 54
                        la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                        if la_ == 1:
                            self.state = 52 
                            self.allinone()
                            pass

                        elif la_ == 2:
                            self.state = 53 
                            self.mainexpr()
                            pass

                 
                    self.state = 58
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 59 
                self.mainexpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61 
                self.allinone()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AllinoneContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.AllinoneContext, self).__init__(parent, invokingState)
            self.parser = parser

        def braceoc(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.BraceocContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.BraceocContext,i)


        def variable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.VariableContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.VariableContext,i)


        def number(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.NumberContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.NumberContext,i)


        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.ExprContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.ExprContext,i)


        def muldiv(self):
            return self.getTypedRuleContext(oftexmathParser.MuldivContext,0)


        def signs(self):
            return self.getTypedRuleContext(oftexmathParser.SignsContext,0)


        def colformat(self):
            return self.getTypedRuleContext(oftexmathParser.ColformatContext,0)


        def rowdelimit(self):
            return self.getTypedRuleContext(oftexmathParser.RowdelimitContext,0)


        def getRuleIndex(self):
            return oftexmathParser.RULE_allinone

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterAllinone(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitAllinone(self)




    def allinone(self):

        localctx = oftexmathParser.AllinoneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_allinone)
        try:
            self.state = 121
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 64 
                        self.braceoc()

                    else:
                        raise NoViableAltException(self)
                    self.state = 67 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 72
                        token = self._input.LA(1)
                        if token in [oftexmathParser.VARIABLE]:
                            self.state = 69 
                            self.variable()

                        elif token in [oftexmathParser.NUMBER]:
                            self.state = 70 
                            self.number()

                        elif token in [oftexmathParser.BACKSLASH]:
                            self.state = 71 
                            self.expr()

                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 76
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 77 
                        self.variable()

                    else:
                        raise NoViableAltException(self)
                    self.state = 80 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 84
                        token = self._input.LA(1)
                        if token in [oftexmathParser.NUMBER]:
                            self.state = 82 
                            self.number()

                        elif token in [oftexmathParser.BACKSLASH]:
                            self.state = 83 
                            self.expr()

                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 88
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 89 
                        self.number()

                    else:
                        raise NoViableAltException(self)
                    self.state = 92 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 96
                        token = self._input.LA(1)
                        if token in [oftexmathParser.VARIABLE]:
                            self.state = 94 
                            self.variable()

                        elif token in [oftexmathParser.BACKSLASH]:
                            self.state = 95 
                            self.expr()

                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 100
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 101 
                        self.expr()

                    else:
                        raise NoViableAltException(self)
                    self.state = 104 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 108
                        token = self._input.LA(1)
                        if token in [oftexmathParser.VARIABLE]:
                            self.state = 106 
                            self.variable()

                        elif token in [oftexmathParser.NUMBER]:
                            self.state = 107 
                            self.number()

                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 112
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113 
                self.muldiv()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114 
                self.signs()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115 
                self.colformat()
                0,1
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 118 
                self.rowdelimit()
                0,1
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BraceocContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.BraceocContext, self).__init__(parent, invokingState)
            self.parser = parser

        def BRACEOPEN(self):
            return self.getToken(oftexmathParser.BRACEOPEN, 0)

        def BRACECLOSE(self):
            return self.getToken(oftexmathParser.BRACECLOSE, 0)

        def allinone(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.AllinoneContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.AllinoneContext,i)


        def getRuleIndex(self):
            return oftexmathParser.RULE_braceoc

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterBraceoc(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitBraceoc(self)




    def braceoc(self):

        localctx = oftexmathParser.BraceocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_braceoc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(oftexmathParser.BRACEOPEN)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << oftexmathParser.VARIABLE) | (1 << oftexmathParser.NUMBER) | (1 << oftexmathParser.BACKSLASH) | (1 << oftexmathParser.COLFORMAT) | (1 << oftexmathParser.BRACEOPEN) | (1 << oftexmathParser.EQ) | (1 << oftexmathParser.PLUS) | (1 << oftexmathParser.MINUS) | (1 << oftexmathParser.ROWDELIMIT))) != 0):
                self.state = 124 
                self.allinone()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(oftexmathParser.BRACECLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.SignsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(oftexmathParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(oftexmathParser.MINUS, 0)

        def EQ(self):
            return self.getToken(oftexmathParser.EQ, 0)

        def getRuleIndex(self):
            return oftexmathParser.RULE_signs

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterSigns(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitSigns(self)




    def signs(self):

        localctx = oftexmathParser.SignsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_signs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << oftexmathParser.EQ) | (1 << oftexmathParser.PLUS) | (1 << oftexmathParser.MINUS))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MuldivContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.MuldivContext, self).__init__(parent, invokingState)
            self.parser = parser

        def mul(self):
            return self.getTypedRuleContext(oftexmathParser.MulContext,0)


        def div(self):
            return self.getTypedRuleContext(oftexmathParser.DivContext,0)


        def getRuleIndex(self):
            return oftexmathParser.RULE_muldiv

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterMuldiv(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitMuldiv(self)




    def muldiv(self):

        localctx = oftexmathParser.MuldivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_muldiv)
        try:
            self.state = 136
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134 
                self.mul()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135 
                self.div()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MulContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.MulContext, self).__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.VariableContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.VariableContext,i)


        def MUL(self):
            return self.getToken(oftexmathParser.MUL, 0)

        def braceoc(self):
            return self.getTypedRuleContext(oftexmathParser.BraceocContext,0)


        def number(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.NumberContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.NumberContext,i)


        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.ExprContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.ExprContext,i)


        def div(self):
            return self.getTypedRuleContext(oftexmathParser.DivContext,0)


        def mul(self):
            return self.getTypedRuleContext(oftexmathParser.MulContext,0)


        def getRuleIndex(self):
            return oftexmathParser.RULE_mul

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterMul(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitMul(self)




    def mul(self):

        localctx = oftexmathParser.MulContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mul)
        try:
            self.state = 168
            token = self._input.LA(1)
            if token in [oftexmathParser.VARIABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138 
                self.variable()
                self.state = 139
                self.match(oftexmathParser.MUL)
                self.state = 146
                la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                if la_ == 1:
                    self.state = 140 
                    self.braceoc()
                    pass

                elif la_ == 2:
                    self.state = 141 
                    self.number()
                    pass

                elif la_ == 3:
                    self.state = 142 
                    self.expr()
                    pass

                elif la_ == 4:
                    self.state = 143 
                    self.variable()
                    pass

                elif la_ == 5:
                    self.state = 144 
                    self.div()
                    pass

                elif la_ == 6:
                    self.state = 145 
                    self.mul()
                    pass



            elif token in [oftexmathParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148 
                self.number()
                self.state = 149
                self.match(oftexmathParser.MUL)
                self.state = 156
                la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
                if la_ == 1:
                    self.state = 150 
                    self.braceoc()
                    pass

                elif la_ == 2:
                    self.state = 151 
                    self.expr()
                    pass

                elif la_ == 3:
                    self.state = 152 
                    self.variable()
                    pass

                elif la_ == 4:
                    self.state = 153 
                    self.number()
                    pass

                elif la_ == 5:
                    self.state = 154 
                    self.div()
                    pass

                elif la_ == 6:
                    self.state = 155 
                    self.mul()
                    pass



            elif token in [oftexmathParser.BACKSLASH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 158 
                self.expr()
                self.state = 159
                self.match(oftexmathParser.MUL)
                self.state = 166
                la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
                if la_ == 1:
                    self.state = 160 
                    self.braceoc()
                    pass

                elif la_ == 2:
                    self.state = 161 
                    self.variable()
                    pass

                elif la_ == 3:
                    self.state = 162 
                    self.number()
                    pass

                elif la_ == 4:
                    self.state = 163 
                    self.expr()
                    pass

                elif la_ == 5:
                    self.state = 164 
                    self.div()
                    pass

                elif la_ == 6:
                    self.state = 165 
                    self.mul()
                    pass



            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DivContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.DivContext, self).__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.VariableContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.VariableContext,i)


        def DIV(self):
            return self.getToken(oftexmathParser.DIV, 0)

        def braceoc(self):
            return self.getTypedRuleContext(oftexmathParser.BraceocContext,0)


        def number(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.NumberContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.NumberContext,i)


        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(oftexmathParser.ExprContext)
            else:
                return self.getTypedRuleContext(oftexmathParser.ExprContext,i)


        def div(self):
            return self.getTypedRuleContext(oftexmathParser.DivContext,0)


        def mul(self):
            return self.getTypedRuleContext(oftexmathParser.MulContext,0)


        def getRuleIndex(self):
            return oftexmathParser.RULE_div

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterDiv(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitDiv(self)




    def div(self):

        localctx = oftexmathParser.DivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_div)
        try:
            self.state = 200
            token = self._input.LA(1)
            if token in [oftexmathParser.VARIABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170 
                self.variable()
                self.state = 171
                self.match(oftexmathParser.DIV)
                self.state = 178
                la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
                if la_ == 1:
                    self.state = 172 
                    self.braceoc()
                    pass

                elif la_ == 2:
                    self.state = 173 
                    self.number()
                    pass

                elif la_ == 3:
                    self.state = 174 
                    self.expr()
                    pass

                elif la_ == 4:
                    self.state = 175 
                    self.variable()
                    pass

                elif la_ == 5:
                    self.state = 176 
                    self.div()
                    pass

                elif la_ == 6:
                    self.state = 177 
                    self.mul()
                    pass



            elif token in [oftexmathParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180 
                self.number()
                self.state = 181
                self.match(oftexmathParser.DIV)
                self.state = 188
                la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
                if la_ == 1:
                    self.state = 182 
                    self.braceoc()
                    pass

                elif la_ == 2:
                    self.state = 183 
                    self.expr()
                    pass

                elif la_ == 3:
                    self.state = 184 
                    self.variable()
                    pass

                elif la_ == 4:
                    self.state = 185 
                    self.number()
                    pass

                elif la_ == 5:
                    self.state = 186 
                    self.div()
                    pass

                elif la_ == 6:
                    self.state = 187 
                    self.mul()
                    pass



            elif token in [oftexmathParser.BACKSLASH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 190 
                self.expr()
                self.state = 191
                self.match(oftexmathParser.DIV)
                self.state = 198
                la_ = self._interp.adaptivePredict(self._input,27,self._ctx)
                if la_ == 1:
                    self.state = 192 
                    self.braceoc()
                    pass

                elif la_ == 2:
                    self.state = 193 
                    self.variable()
                    pass

                elif la_ == 3:
                    self.state = 194 
                    self.number()
                    pass

                elif la_ == 4:
                    self.state = 195 
                    self.expr()
                    pass

                elif la_ == 5:
                    self.state = 196 
                    self.div()
                    pass

                elif la_ == 6:
                    self.state = 197 
                    self.mul()
                    pass



            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColformatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.ColformatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def COLFORMAT(self):
            return self.getToken(oftexmathParser.COLFORMAT, 0)

        def getRuleIndex(self):
            return oftexmathParser.RULE_colformat

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterColformat(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitColformat(self)




    def colformat(self):

        localctx = oftexmathParser.ColformatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_colformat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(oftexmathParser.COLFORMAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RowdelimitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.RowdelimitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ROWDELIMIT(self):
            return self.getToken(oftexmathParser.ROWDELIMIT, 0)

        def getRuleIndex(self):
            return oftexmathParser.RULE_rowdelimit

        def enterRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.enterRowdelimit(self)

        def exitRule(self, listener):
            if isinstance( listener, oftexmathListener ):
                listener.exitRowdelimit(self)




    def rowdelimit(self):

        localctx = oftexmathParser.RowdelimitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rowdelimit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.match(oftexmathParser.ROWDELIMIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(oftexmathParser.VariableContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(oftexmathParser.VARIABLE, 0)

        def subset(self):
            return self.getTypedRuleContext(oftexmathParser.SubsetContext,0)

